--- a/public/desk.html
+++ b/public/desk.html
@@ -18,6 +18,10 @@
         Call next ticket
     </button>
 
+    <script src="js/libs/jquery.min.js"></script>
+    <script src="socket.io/socket.io.js"></script>
+    <script src="js/socket.desk.js"></script>
+
 
 </body>
 
